Thu Jul 15 09:47:04 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc:
        
          Added -Gex to command line of HelloA.idl processing,
          and the resuling generated reply handler implementation
          files to the connector project.

Thu Jul 15 09:34:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Interceptors/Standard_Error.h:
          Doxygen changes

        * etc/ciao_DAnCE.doxygen:
          Use INet tag file

Thu Jul 15 09:12:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ContentFilterSetting.h:
        * connectors/dds4ccm/impl/DataWriter.h:
        * connectors/dds4ccm/impl/StatusCondition.h:
          Resolved compile issues on Windows.

Thu Jul 15 08:38:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ContentFilterSetting.h:
        * connectors/dds4ccm/impl/ContentFilteredTopic_T.h:
        * connectors/dds4ccm/impl/DDS4CCM_LocalObject_T.h:
        * connectors/dds4ccm/impl/DDS4CCM_LocalObject_T.cpp:
        * connectors/dds4ccm/impl/DDSDataReaderListener_T.h:
        * connectors/dds4ccm/impl/DDSDataWriterListener_T.h:
        * connectors/dds4ccm/impl/DDSPublisherListener_T.h:
        * connectors/dds4ccm/impl/DDSTopicListener_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DataListenerControl_T.h:
        * connectors/dds4ccm/impl/DataListenerControl_T.cpp:
        * connectors/dds4ccm/impl/DataWriter.h:
        * connectors/dds4ccm/impl/DataWriter_T.h:
        * connectors/dds4ccm/impl/DomainParticipantFactory_T.h:
        * connectors/dds4ccm/impl/DomainParticipantListener.h:
        * connectors/dds4ccm/impl/DomainParticipantListener_T.h:
        * connectors/dds4ccm/impl/DomainParticipant_T.h:
        * connectors/dds4ccm/impl/Getter_T.h:
        * connectors/dds4ccm/impl/Getter_T.cpp: